welcome page styling and adding error class

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -203,3 +203,11 @@ footer > p{
 .error {
     color: red;
 }
+
+#welcomeMsg {
+    text-align: center;
+}
+
+#welcomeStranger {
+    margin-bottom: 620px;
+}
