code cleanup and sendgrid send error display logic added

--- a/views/account/registration.hbs
+++ b/views/account/registration.hbs
@@ -1,7 +1,6 @@
 <!-- Name: Lion Yakubov
      Student ID: lyakubov
      Student #129517207 -->
-
 <h1>Registration Page</h1>
 <section id="registration">
      <p><span class="required">*</span> Required field</p>
@@ -46,6 +45,9 @@
           </fieldset>
      </form>
 </section>
+{{#if err}}
+     <span class="error">{{err}}</span>
+{{/if}}
 
 
            <!--<div id="date">
