--- a/views/account/welcome.hbs
+++ b/views/account/welcome.hbs
@@ -1,3 +1,6 @@
+<!-- Name: Lion Yakubov
+     Student ID: lyakubov
+     Student #129517207 -->
 <div id="welcomeMsg">
     {{#if details}}
         <p>Welcome to our community {{details.firstName}} {{details.lastName}}! <br><br>
