--- a/views/partials/mealkit.hbs
+++ b/views/partials/mealkit.hbs
@@ -1,5 +1,6 @@
-
-
+<!-- Name: Lion Yakubov
+     Student ID: lyakubov
+     Student #129517207 -->
 <div class="mealkit">
     <img src={{imageUrl}} alt="">
     <h4>{{title}}</h4>
