adding accounts to database

--- a/views/account/welcome.hbs
+++ b/views/account/welcome.hbs
@@ -7,8 +7,10 @@
         We appreciate that you choose us to be your meal kit provider! <br>
         We hope that you enjoy our meals and services, if there is any problems with anything don't hesitate to contact us at 'lyakubov@myseneca.ca'.<br>
         have a great day!</p>
+        <p>You can log in into your account here <a href="/login">Log In</a></p>
         {{>hero}}
     {{else}}
         <p id="welcomeStranger">Welcome stranger, please consider signing up to our website <a href="/register">here</a></p>
+        <p>If you have an account you can log in here <a href="/login">Log In</a></p>
     {{/if}}
 </div>
