adding mealkits to database logic and protection of the route

--- a/views/account/clerkDash.hbs
+++ b/views/account/clerkDash.hbs
@@ -1,2 +1,4 @@
 <p>Welcome back {{account.firstName}} {{account.lastName}}! <br><br>
 This page is under maintnance in the moment, sorry for the inconvenience.</p>
+<br><br>
+<p>To load mealkits to database: <a href="load-data/meal-kits">click here</a></p>
